fix jumpy scroll under sticky nav

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ body {
 
 #title {
   font-family: 'Abril Fatface';
-  font-size: 5vw;
+  font-size: 6.5vw;
   padding-top: 3vw;
   padding-bottom: 3vw;
 }
@@ -39,9 +39,16 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   overflow: hidden;
+  margin-bottom: 150px;
 }
 
 .sticky {
   position: fixed;
   top: 0;
+}
+
+.topblock {
+  position: inherit;
+  height: 14.25vw;
+  padding-top: 14.25vw;
 }
